Add contacts view and edit modal

--- a/src/_metronic/assets/sass/style.scss
+++ b/src/_metronic/assets/sass/style.scss
@@ -8,6 +8,10 @@ $mode: default;
 // Initialize
 @import "init";
 
+// Plugins
+@import "plugins";
+
+
 // Components
 @import "./core/components/components";
 @import "components/components";
